Sprint 2 Release. 9 brands 3 divsion

--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,9 @@
       line-height: 20px;
       letter-spacing: 7px;
         }
+        .img{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -50,6 +53,9 @@
     </div>
     <div>
         <h1 class="Title">A Mall For Family</h1>
+    </div>
+    <div>
+        <img src="Brands.PNG" alt="brands" class="img" style="display: block; margin-left: auto; margin-right: auto;">
     </div>
 </body>
 </html>
