--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         html, body {
             max-width: 100%;
             overflow-x: hidden;
             background-color: white;
         }
+        .footer{
+    background-color: rgb(216, 216, 216);
+    padding: 5px;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+    width:100%;
+    left: 0px;
+        }
+/*Icons for footer. Changing color and adding rounded corners*/
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.fa-instagram {
+    background-color: red;
+    color: white;
+}
+.fa {
+  padding: 5px;
+  font-size: 10px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+/*When hoving over an icon they picture will go to 0.7 opacity*/ 
+.fa:hover {
+    opacity: 0.7;
+}
         .Header{
             
             height: 80px;
@@ -132,5 +169,12 @@ fieldset{
         <input type="submit" value="Submit" class="button">
         </fieldset>
     </form>
+    <br><br><br><br>
+    <div class="footer">
+        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
+        <img href="" style="width:1.2%; padding: 0px;" src="https://cdn.discordapp.com/attachments/511733115241234472/778179701532393492/whatsapp-icon.png"></a>
+    </div>
 </body>
 </html>
